--- a/financedashboard/package.json
+++ b/financedashboard/package.json
@@ -9,6 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.3",
+    "@mui/material": "^5.15.3",
     "next": "13.5.6",
     "next-auth": "^4.24.5",
     "react": "^18",
