--- a/financedashboard/package.json
+++ b/financedashboard/package.json
@@ -16,7 +16,8 @@
     "next": "13.5.6",
     "next-auth": "^4.24.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sass": "^1.69.7"
   },
   "devDependencies": {
     "@types/node": "^20",
