--- a/financedashboard/package.json
+++ b/financedashboard/package.json
@@ -20,7 +20,8 @@
     "next-auth": "^4.24.5",
     "react": "^18",
     "react-dom": "^18",
-    "sass": "^1.69.7"
+    "sass": "^1.69.7",
+    "storybook-dark-mode": "^3.0.3"
   },
   "devDependencies": {
     "@storybook/addon-essentials": "^7.6.8",
