--- a/financedashboard/package.json
+++ b/financedashboard/package.json
@@ -20,7 +20,6 @@
     "next-auth": "^4.24.5",
     "react": "^18",
     "react-dom": "^18",
-    "sass": "^1.69.7",
     "storybook-dark-mode": "^3.0.3"
   },
   "devDependencies": {
@@ -38,6 +37,8 @@
     "eslint": "^8",
     "eslint-config-next": "13.5.6",
     "eslint-plugin-storybook": "^0.6.15",
+    "prettier": "^3.2.2",
+    "sass": "^1.69.7",
     "storybook": "^7.6.8",
     "typescript": "^5"
   }
