--- a/financedashboard/package.json
+++ b/financedashboard/package.json
@@ -16,6 +16,9 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.3",
     "@mui/material": "^5.15.3",
+    "@mui/x-data-grid": "^6.18.7",
+    "@mui/x-data-grid-generator": "^6.18.7",
+    "chart.js": "^4.4.1",
     "next": "13.5.6",
     "next-auth": "^4.24.5",
     "react": "^18",
